<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="main_desc">On app, one game. Made by Olivier Bénichou for Android Exam on Dec 17th, 2018. Please Enter
        your name:
    </string>
    <string name="Neam_to_fill">Name</string>
    <string name="game_name">Tic Tac Toe</string>
    <string name="button_start">Start!</string>
    <string name="text_made">Made at:</string>
    <string name="date_result">date</string>
    <string name="name_result">Name</string>
    <string name="todo">TODO</string>
</resources>
