<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="80dp">


    <TextView
            android:text="@string/name_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player_name_result_row" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp" app:srcCompat="@drawable/ic_thumb_up"
            android:id="@+id/result_view_image_result" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/player_name_result_row" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/result_view_date"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:contentDescription="@string/todo"/>
    <TextView
            android:text="@string/date_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/result_view_date" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>